# System-Recommendation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: DATASET.md  LEGACY_REPORT_2023.md
legacy/: README.md  rekomendasi.ipynb  rekomendasi.py
notebooks/: 01_end_to_end_book_recommender.ipynb  01_end_to_end_book_recommender.py
src/book_recommender/: __init__.py  cli.py  collaborative.py  content_based.py  data.py  evaluation.py
tests/: test_recommenders.py
